doc/changes/package_diffs/12.0.0/template-Exasol-all-python-3.10-conda/internal_packages.md
# Internal packages comparison between flavor "Template Exasol All Python 3.10 Conda" in 12.0.0 and flavor "Template Exasol All Python 3.10 Conda" in 11.3.0

<!-- markdown-link-check-disable -->

## Apt packages

|    | Package   | Version in 11.3.0    | Version in 12.0.0    | Status   | Build-Step     |
|---:|:----------|:---------------------|:---------------------|:---------|:---------------|
|  0 | binutils  | 2.38-4ubuntu*        | 2.38-4ubuntu*        |          | base_test_deps |
|  1 | gdb       | 12.1-0ubuntu*        | 12.1-0ubuntu*        |          | base_test_deps |
|  2 | gdbserver | 12.1-0ubuntu*        | 12.1-0ubuntu*        |          | base_test_deps |
|  3 | patchelf  | 0.14.3-1             | 0.14.3-1             |          | base_test_deps |
|  4 | strace    | 5.16-0ubuntu*        | 5.16-0ubuntu*        |          | base_test_deps |
|  5 | valgrind  | 1:3.18.1-1ubuntu*    | 1:3.18.1-1ubuntu*    |          | base_test_deps |
|  6 | gnupg     | No version specified | No version specified |          | security_scan  |
|  7 | trivy     | No version specified | No version specified |          | security_scan  |

## Conda packages

|    | Package   | Version in 11.3.0   | Version in 12.0.0   | Status   | Build-Step   |
|---:|:----------|:--------------------|:--------------------|:---------|:-------------|
|  0 | bazel     | =8.3.1              | =9.2.0              | UPDATED  | build_deps   |
|  1 | protobuf  | =6.31.1             | =7.35.1             | UPDATED  | build_deps   |
|  2 | chrpath   | =0.16               | =0.16               |          | build_deps   |
|  3 | gcc       | =12.4.0             | =12.4.0             |          | build_deps   |
|  4 | gxx       | =12.4.0             | =12.4.0             |          | build_deps   |
|  5 | make      | =4.3                | =4.3                |          | build_deps   |
|  6 | pcre      | =8.45               | =8.45               |          | build_deps   |